# sentenceencoder_modal_deploy

./: pyproject.toml
