[tool.poetry]
name = "sentenceencoder-modal-deploy"
version = "0.1.0"
description = ""
authors = ["HRNPH <hrnph@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
modal = "^0.57.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
